test nan and median replace

--- a/test_median.ipynb
+++ b/test_median.ipynb
@@ -78,6 +78,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "number of nan values 9\nmean with np.nan values : 10.92308 and variance: 56.96068\nnumber of nan values 0\nmean with fillnan median value: 11.02 and variance: 51.87838\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.DataFrame([\n",
+    "    12, 9, 0, 11,8, 9,20,18,18,18,\n",
+    "    16,20,2,2,2,2,4,18,18,18,\n",
+    "    16,20,2,2,2,2,4,18,18,18,\n",
+    "    16,20,2,2,2,2,4,18,18,18,\n",
+    "    11, 9, 0, 12,8, 9,20,18,18,18,\n",
+    "    12, 19, 0, 17,18, 2,20,18,18,18,\n",
+    "    16,20,2,2,2,2,4,18,18,18,\n",
+    "    16,20,2,2,2,2,4,18,18,18,\n",
+    "    16,20,2,2,2,2,4,18,18,18,\n",
+    "    16,20,2,2,2,2,4,18,18,18\n",
+    "])\n",
+    "\n",
+    "# On crée au max 10 values nan dans le DataFrame\n",
+    "count = 0\n",
+    "while count < 10:\n",
+    "    count += 1\n",
+    "    data.loc[r.randint(1, 100), 0] = np.nan\n",
+    "\n",
+    "# Vérifions qu'il y a bien 10 valeurs nan\n",
+    "print(\"number of nan values\", data.isnull().sum()[0])\n",
+    "\n",
+    "# Calculons la moyenne et variance\n",
+    "mean = round( data.mean()[0], PRECISION)\n",
+    "variance = round( data.var()[0], PRECISION)\n",
+    "print( f\"mean with np.nan values : {mean} and variance: {variance}\" )\n",
+    "\n",
+    "# on remplace maintenant les valeurs manquantes par la mediane\n",
+    "data.fillna(data.median(), inplace=True)\n",
+    "\n",
+    "# Vérifions qu'il n'y a plus de valeur nan\n",
+    "print(\"number of nan values\", data.isnull().sum()[0])\n",
+    "\n",
+    "# Calculons maintenant la moyenne et la variance \n",
+    "mean = round( data.mean()[0], PRECISION)\n",
+    "variance = round( data.var()[0], PRECISION)\n",
+    "print(f\"mean with fillnan median value: {mean} and variance: {variance}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
